# phone-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  cli_main.py  demo.md  demo.py  fast_main.py  main.py  phone-agent生成开发计划.md  pyproject.toml  renovate.json  requirements.txt  taskfile.yaml  teatTODO.md  todo.md  vicoding生成条例.md  微信对接开发计划.md  提示词与tool优化开发计划.md  电话交互agent项目系统选型讨论过程.md  语音交互agent系统需求.md
.claude/: settings.local.json
agents/: llm_agent.py
api/: pthon_api.py
config/: agent_config.py  livekit_config.py
infra/: mysql.py  schema.py  visitor_db.py  wechat_push.py
prompts/: llm_prompy.py
state/: python_state.py
tool/: llm_tool.py  voice_tool.py
