[project]
name = "outbound-caller-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "livekit>=1.1.7",
    "livekit-api>=0.8.0",
    "uvicorn[standard]>=0.46.0",
    "mysql-connector-python>=9.0",
    "openai>=1.0",
]
