[project]
name = "outbound-caller-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "livekit>=1.1.7",
    "livekit-api>=0.8.0",
    "uvicorn[standard]>=0.46.0",
    "mysql-connector-python>=9.0",
    "openai>=1.0",
    "livekit-agents>=1.5.7",
    "livekit-plugins-deepgram>=1.5.7",
    "livekit-plugins-cartesia>=1.5.7",
    "livekit-plugins-silero>=1.5.7",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-turn-detector>=1.5.7",
    "python-dotenv>=1.2.2",
    "livekit-plugins-openai>=1.5.7",
]
